--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <string name="app_version">Version \u0020</string>
     <!-- common -->
     <string name="common_action_validate">Valider</string>
     <string name="common_action_terminate">Terminate</string>
@@ -27,8 +28,12 @@
     <string name="menu_title_person">Account</string>
 
     <!-- action -->
+    <string name="action_about">About</string>
     <string name="action_search">Search</string>
     <string name="action_logout">Logout</string>
+
+    <!-- activity title -->
+    <string name="activity_about_title">About</string>
 
     <!-- message text -->
     <string name="message_network_error">No internet connection available</string>
