--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
     <string name="app_name" translatable="false">Maplenou</string>
+    <string name="app_version">Version \u0020</string>
 
     <!-- common -->
     <string name="common_action_validate">Valider</string>
@@ -28,8 +29,12 @@
     <string name="menu_title_person">Compte</string>
 
     <!-- action -->
+    <string name="action_about">A propos</string>
     <string name="action_search">Rechercher</string>
     <string name="action_logout">Déconnexion</string>
+
+    <!-- activity title -->
+    <string name="activity_about_title">A propos</string>
 
     <!-- message text -->
     <string name="message_network_error">Aucune connexion internet disponible</string>
