chore: improve ui titling

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,7 +21,7 @@
     <string name="common_title_make_call">Appeler</string>
     <string name="common_title_search">Rechercher</string>
 
-    <string name="menu_title_announcement">Announces</string>
+    <string name="menu_title_announcement">Announce</string>
     <string name="menu_title_favorite">Favoris</string>
     <string name="menu_title_delete">Supprimer</string>
     <string name="menu_title_add">Créer</string>
